@@ -32,7 +32,7 @@
 #define TAP_STRING_H 1
 
 #include <config.h>
-#include <portable/macros.h>
+#include <tests/tap/macros.h>
 
 #include <stdarg.h>             /* va_list */
 
